--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.6.0",
     "konva": "^7.2.5",
-    "node-sass": "^4.14.0",
+    "node-sass": "^6.0.1",
     "query-string": "^4.3.4",
     "rc-slider": "^9.7.2",
     "react": "^17.0.2",
@@ -53,5 +53,8 @@
     "redux-thunk": "^2.3.0",
     "use-image": "^1.0.7",
     "web-vitals": "^1.1.1"
+  },
+  "devDependencies": {
+    "sass-loader": "^10.2.0"
   }
 }
